5- Intermediate Kubernetes/Code/03-how-to-expose-http-services/service.yaml
# Service to expose the HTTP pod
# This service makes the pod accessible within the cluster

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: test-svc
  name: test-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: test-http
  type: ClusterIP
