5- Intermediate Kubernetes/Code/03-how-to-expose-http-services/ingress.yaml
# Ingress to expose the service externally
# This ingress makes the service accessible from outside the cluster

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  ingressClassName: haproxy
  rules:
  - host: test-service.nrp-nautilus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-svc
            port:
              number: 8080
  tls:
  - hosts:
    - test-service.nrp-nautilus.io
